--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -5,9 +5,8 @@
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: #201f1f;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -60,11 +59,4 @@ ol {
 input,
 textarea {
   padding: 0;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
 }
